--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -157,7 +157,7 @@ nav:
   - About:
     - License: about/license.md
     - Release Notes: about/release-notes.md
-  - Rss:
+  - Rss: 'Rss.md'
   - Announcement: 'Rss.md'  
   - Files:
     - Announcement: 'Files-Guide.md'
