--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -159,6 +159,7 @@ nav:
     - Genshin_Impact_tts.lua: Scripts/Genshin_Impact_tts.md
   - Module: 
     - Print.lua: Module/Print.md
+    - listen2me wiki: Module/listen2me-wiki.md
   - About:
     - License: about/license.md
     - Release Notes: about/release-notes.md
