--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -160,7 +160,7 @@ nav:
   - Module: 
     - Print.lua: Module/Print.md
   - Wiki:
-    - listen2me: wiki/listen2me.md
+    - listen2me: wiki/Midido.md
   - About:
     - License: about/license.md
     - Release Notes: about/release-notes.md
