--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -78,7 +78,15 @@ plugins:
   - print-site
   - tooltips
   - categories
-  - git-committers
+  - git-authors:
+      show_contribution: true
+      show_line_count: true
+      count_empty_lines: true
+      fallback_to_empty: false
+      exclude:
+          - index.md
+      enabled: true
+
 # Customization
 extra:
   analytics:
