--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,7 @@ jobs:
           python-version: 3.x
       - run: pip install mkdocs
       - run: pip install mkdocs-material
-      - run: pip install mkdocs-blogging-plugin  # 记得安装其他依赖的库
-      - run: pip install hello-dolly
+      - run: pip install mkdocs-blogging-plugin
+      - run: pip install git+https://github.com/fmaida/hello-dolly-mkdocs-plugin
+      - run: 
       - run: mkdocs gh-deploy --force
