--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,5 +24,5 @@ jobs:
       - run: pip install mkdocs-print-site-plugin
       - run: pip install mkdocs-tooltips
       - run: pip install mkdocs-categories-plugin
-      - run: git push -f git@github.com:Haixiang6123/first-page.git master
+      - run: git push -f git@github.com:cypress0522/ssJSKFJDJ.git gh-pages
       # mkdocs gh-deploy --force
