--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,10 @@ on:
   push:
     branches:
       - master 
+  pull_request:
+    branches:
+      - gh-pages
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -24,5 +28,6 @@ jobs:
       - run: pip install mkdocs-print-site-plugin
       - run: pip install mkdocs-tooltips
       - run: pip install mkdocs-categories-plugin
-      - run: git push -f git@github.com:cypress0522/ssJSKFJDJ.git gh-pages
+      - run: mkdocs gh-deploy --force
+      # git push -f git@github.com:cypress0522/ssJSKFJDJ.git gh-pages
       # mkdocs gh-deploy --force
