--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,7 +3,7 @@ site_name: ssJSKFJDJ
 site_url: https://ssjskfjdj.netlify.app/
 site_author: MIZUKORA
 site_description: >-
-  baka!
+  Script & Module Recycle Bin >
 # Repository
 repo_url: https://github.com/ssJSKFJDJ/main-pages
 repo_name: ssJSKFJDJ/main-pages
