--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -168,7 +168,7 @@ nav:
   - Module: 
     - Print.lua: Module/Print.md
   - Wiki:
-    - listen2me: wiki/Midido.md
+    - Midido: wiki/Midido.md
   - About:
     - License: about/license.md
     - Release Notes: about/release-notes.md
