--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -81,10 +81,8 @@ plugins:
   - print-site
   - tooltips
   - categories
-  # - git-committers:
-  #     repository: ssJSKFJDJ/main-pages
-  #     branch: master
-
+  - git-show-history-log:
+      max_number_of_commits: 3
 # Customization
 extra:
   analytics:
@@ -125,7 +123,6 @@ markdown_extensions:
       generic: true
   - pymdownx.betterem:
       smart_enable: all
-
   - pymdownx.caret
   - pymdownx.details
   - pymdownx.emoji:
@@ -151,6 +148,7 @@ markdown_extensions:
   - pymdownx.tasklist:
       custom_checkbox: true
   - pymdownx.tilde
+  - pymdownx.superfences
 
 extra_css:
   - css/hint.min.css
