--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -167,9 +167,9 @@ nav:
     - Print.lua: Module/Print.md
   - Wiki:
     - Midido: wiki/Midido.md
-  - About:
-    - License: about/license.md
-    - Release Notes: about/release-notes.md
+  # - About:
+  #   - License: about/license.md
+  #   - Release Notes: about/release-notes.md
   - Rss:
     - Announcement: 'Rss.md'  
   - Files:
