--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -167,6 +167,7 @@ nav:
     - Print.lua: Module/Print.md
   - Wiki:
     - Midido: wiki/Midido.md
+    - mml530: wiki/mml530/command_zh.md
   # - About:
   #   - License: about/license.md
   #   - Release Notes: about/release-notes.md
