--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -166,8 +166,10 @@ nav:
   - Module: 
     - Print.lua: Module/Print.md
   - Wiki:
-    - Midido: wiki/Midido.md
-    - mml530: wiki/mml530/doc/command_zh.md
+    - Midido: 
+      - Guide: wiki/midido-guide.md
+    - mml530:  
+      - Guide: wiki/mml530/doc/mml-guide.md
   # - About:
   #   - License: about/license.md
   #   - Release Notes: about/release-notes.md
