--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,8 @@ copyright: Copyright &copy; 2018 - 2022 ssJSKFJDJ
 theme:
   name: null
   custom_dir: !ENV [THEME_DIR, "material"]
+  features:
+    - content.tooltips
 
   # Static files
   static_templates:
@@ -124,6 +126,7 @@ markdown_extensions:
   - pymdownx.betterem:
       smart_enable: all
   - pymdownx.caret
+  - pymdownx.snippets
   - pymdownx.details
   - pymdownx.emoji:
       emoji_generator: !!python/name:materialx.emoji.to_svg
