--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -173,6 +173,7 @@ nav:
       - Guide: wiki/midido-guide.md
     - mml530:  
       - Guide: wiki/mml530/doc/mml-guide.md
+      - Forward: wiki/mml530/doc/forward.md
   # - About:
   #   - License: about/license.md
   #   - Release Notes: about/release-notes.md
