--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,6 @@ jobs:
           python-version: 3.x
       - run: pip install mkdocs
       - run: pip install mkdocs-material
-      - run: pip install mkdocs-blogging-plugin
       - run: pip install git+https://github.com/fmaida/hello-dolly-mkdocs-plugin
       - run: pip install git+https://github.com/srymh/MkdocsTagPlugin
       - run: pip install mkdocs-git-revision-date-plugin
@@ -29,6 +28,8 @@ jobs:
       - run: pip install mkdocs-tooltips
       - run: pip install mkdocs-categories-plugin
       - run: pip install mkdocs-git-show-history-log-plugin
+      - run: pip install mkdocs-video
+      - run: pip install mkdocs-izsam-video
       - run: mkdocs gh-deploy --force
       # git push -f git@github.com:cypress0522/ssJSKFJDJ.git gh-pages
       # mkdocs gh-deploy --force
