--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -122,7 +122,7 @@ extra:
           data: 0
           note: >- 
             你tmd也太可爱了吧。
-            点击<a href="https://cypress0522.github.io/about" target="_blank" rel="noopener">链接</a>来提交你的建议吧...
+            点击<a href="https://A2C29K9.github.io/about" target="_blank" rel="noopener">链接</a>来提交你的建议吧...
 
   social:
     - icon: fontawesome/solid/paper-plane
